Overflow fix for job apply

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body{
   "header header" 
   "main main" 
   "footer footer";
-  
+  overflow: hidden;
 }
 
 /* -- TOPNAV -- */
